fix - removed left padding caused x-overflow
"Remove left padding in course view" didn't work --> removed code

--- a/src/modules/courses/styles/course.scss
+++ b/src/modules/courses/styles/course.scss
@@ -45,9 +45,4 @@
 			margin-right: 10px;
 		}
 	}
-	@include media-breakpoint-down(xs) {
-		.container-fluid{
-			padding:0;
-		}
-	}
 }
